--- a/config/sample-multi-mcu.cfg
+++ b/config/sample-multi-mcu.cfg
@@ -1,20 +1,20 @@
-# This file contains an example configuration with three
-# micro-controllers simultaneously controlling a single printer.
+ This file contains an example configuration with three
+ micro-controllers simultaneously controlling a single printer.
 
-# See docs/Config_Reference.md for a description of parameters.
+ See docs/Config_Reference.md for a description of parameters.
 
 
-# The main micro-controller is used as the timing source for all the
-# micro-controllers on the printer. Typically, both the X and Y axes
-# are connected to the main micro-controller.
+ The main micro-controller is used as the timing source for all the
+ micro-controllers on the printer. Typically, both the X and Y axes
+ are connected to the main micro-controller.
 [mcu]
 serial: /dev/serial/by-path/platform-3f980000.usb-usb-0:1.2:1.0-port0
 
-# The "zboard" micro-controller will be used to control the Z axis.
+ The "zboard" micro-controller will be used to control the Z axis.
 [mcu zboard]
 serial: /dev/serial/by-path/platform-3f980000.usb-usb-0:1.3:1.0-port0
 
-# The "auxboard" micro-controller will be used to control the heaters.
+ The "auxboard" micro-controller will be used to control the heaters.
 [mcu auxboard]
 serial: /dev/serial/by-path/platform-3f980000.usb-usb-0:1.4:1.0-port0
 
